--- a/index.html
+++ b/index.html
@@ -3,12 +3,32 @@
 <head>
 	<!-- hola -->
 	<title>Jon Tejada, full stack developer</title>
-	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+	<!-- <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'> -->
+	<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"> -->
 	<link rel="stylesheet" href="static/bootstrap.css">
 	<link rel="stylesheet" href="static/style.css">
 </head>
 <body>
-	<h1>hello</h1>
+
+<div class="container-fluid">
+	<div class="row">
+		<h1>hello</h1>
+	</div>
+	<div class="row">
+		<div class="col-md-3 bkcol">
+			<p>1</p>
+		</div>
+		<div class="col-md-3 bkcol">
+			<p>2</p>
+		</div>
+		<div class="col-md-3 bkcol">
+			<p>3</p>
+		</div>
+		<div class="col-md-3 bkcol">
+			<p>4</p>
+		</div>
+	</div>
+</div>
+
 </body>
 </html>
