--- a/index.html
+++ b/index.html
@@ -3,22 +3,40 @@
 <head>
 	<!-- hola -->
 	<title>Jon Tejada, full stack developer</title>
-	<!-- <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'> -->
-	<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"> -->
+	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="static/bootstrap.css">
 	<link rel="stylesheet" href="static/style.css">
 </head>
 <body>
 
-<div class="container-fluid">
-	<div class="row">
-		<h1>hello</h1>
+<div class="container">
+	<div class="row header">
+		<h1>Jon Tejada
+		<a href="https://github.com/jontejada"><i class="fa fa-github"></i></a>
+		<a href="https://www.linkedin.com/in/jontejada"><i class="fa fa-linkedin-square"></i></a>
+		<a href="/email"><i class="fa fa-envelope-o"></i></a>
+		<!-- <i class="fa fa-file-o"></i> -->
+		<a href="/resume"><i class="fa fa-file-text-o"></i></a>
+		</h1>
 	</div>
-	<div class="row">
+	<div class='row'>
+		<p>full stack web designer & developer in San Francisco</p>
+	</div>
+	<div class='row'>
+		<div class='col-md-6'>
+			<h2>portfolio</h2>
+		</div>
+		<div class='col-md-6'>
+			<h2></h2>
+
+		</div>
+	</div>
+<!-- 	<div class="row">
 		<div class="col-md-3 bkcol">
 			<p>1</p>
 		</div>
-		<div class="col-md-3 bkcol">
+		<div class="col-md-3 ">
 			<p>2</p>
 		</div>
 		<div class="col-md-3 bkcol">
@@ -28,7 +46,7 @@
 			<p>4</p>
 		</div>
 	</div>
-</div>
+ --></div>
 
 </body>
 </html>
