--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 	<!-- hola -->
 	<title>Jon Tejada, full stack developer</title>
-	<!-- <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'> -->
-	<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"> -->
+	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="static/bootstrap.css">
 	<link rel="stylesheet" href="static/style.css">
 </head>
@@ -24,65 +24,76 @@
 		<p><span id='title'>full stack web developer in San Francisco</span></p>
 	</div>
 	<div class='row'>
-<!-- 		<div class='col-md-6'>
-			<h2>portfolio</h2>
-		</div>
-		<div class='col-md-6'>
-			<h2></h2>
-
-		</div>
- -->	</div>
-	<div class="row portfolio">
-		<div class="col-md-6 col-lg-3">
-			<p>Sedona Stone Veneer live site</p>
-			<img class='portfolio-item' src="static/ssv.jpg">
-			<p>stuff</p>
-		</div>
-		<div class="col-md-6 col-lg-3">
-			<p>NearMeow</p>
-			<img class='portfolio-item' src="static/nearmeow.jpg">
-			<p>Local reccomendation engine implemented with Google Javascript MapsAPI, ___
-	</p>
-		</div>
-		<div class="col-md-6 col-lg-3">
-			<p>3</p>
-			<img class='portfolio-item' src="static/tea.jpg">
-		</div>
-		<div class="col-md-6 col-lg-3">
-			<p>4</p>
-			<img class='portfolio-item' src="static/ssv2.jpg">
-		</div>
+		
 	</div>
-	<div class="row portfolio">
-		<div class="col-md-3 ">
-			<p>1</p>
-			<img class='portfolio-item' src="static/gFood.jpg">
+	<div class="row folio">
+		<div class="col-md-6 col-lg-4 col-sm-6">
+			<a href="http://sedonasv.com">
+				<img class='folio-item' src="static/ssv.jpg">
+			</a>
+			<div class='folio-desc'>
+				<p class='folio-text'>
+					<span class='folio-title'>Sedona Stone Veneer</span>
+					 - live website for a construction products business in Arizona
+				</p>
+			</div>
 		</div>
-		<div class="col-md-3 ">
-			<p>2</p>
-			<img class='portfolio-item' src="static/notReddit.jpg">
+		<div class="col-md-6 col-lg-4 col-sm-6">
+			<a href="http://nearmeow.com">
+				<img class='folio-item' src="static/nearmeow.jpg">
+			</a>
+			<div class='folio-desc'>
+				<p class='folio-text'>
+					<span class='folio-title'>NearMeow</span>
+					 - Local reccomendation engine implemented with Google Javascript MapsAPI,
+				</p>
+				<p>
+					<a href="https://github.com/jonharlem/nearmeow">github repo</a>
+				</p>
+			</div>
 		</div>
-		<div class="col-md-3 ">
-			<p>3</p>
-			<img class='portfolio-item' src="static/pixel.jpg">
+		<div class="col-md-6 col-lg-4 col-sm-6">
+			<a href="www.jontejada.com/tea">
+				<img class='folio-item' src="static/tea.jpg">
+			</a>
+			<div class='folio-desc'>
+				<p class='folio-text'>
+					<span class='folio-title'>MeanTea Store</span>
+					 - AngularJS project
+				</p>
+				<p>
+					<a href="https://github.com/jontejada/tea">github repo</a>
+				</p>
+			</div>			
 		</div>
-		<div class="col-md-3 ">
+		<div class="col-md-6 col-lg-4 col-sm-6">
+			<img class='folio-item' src="static/ssv2.jpg">
+		</div>
+		<div class="col-md-6 col-lg-4 col-sm-6">
+			<img class='folio-item' src="static/gFood.jpg">
+		</div>
+		<div class="col-md-6 col-lg-4 col-sm-6">
+			<img class='folio-item' src="static/notReddit.jpg">
+		</div>
+		<div class="col-md-6 col-lg-4 col-sm-6">
+			<img class='folio-item' src="static/pixel.jpg">
+		</div>
+		<div class="col-md-6 col-lg-4 col-sm-6">
+			<img class='folio-item' src="static/spotifysearch.jpg">
+		</div>
+		<!-- dummy below -->
+		<div class="col-md-6 col-lg-4 col-sm-6">
+			<img class='folio-item' src="static/gFood.jpg">
+		</div>
+		<div class="col-md-6 col-lg-4 col-sm-6">
+			<img class='folio-item' src="static/notReddit.jpg">
+		</div>
+		<div class="col-md-6 col-lg-4 col-sm-6">
+			<img class='folio-item' src="static/pixel.jpg">
+		</div>
+		<div class="col-md-6 col-lg-4 col-sm-6">
 			<p>4</p>
-			<img class='portfolio-item' src="static/spotifysearch.jpg">
-		</div>
-	</div>
-	<div class="row portfolio">
-		<div class="col-md-3 ">
-			<p>1</p>
-		</div>
-		<div class="col-md-3 ">
-			<p>2</p>
-		</div>
-		<div class="col-md-3 ">
-			<p>3</p>
-		</div>
-		<div class="col-md-3 ">
-			<p>4</p>
+			<img class='folio-item' src="static/spotifysearch.jpg">
 		</div>
 	</div>
 </div>
