--- a/test.html
+++ b/test.html
@@ -13,7 +13,7 @@
 	<div class="bar" id="bar2"></div>
 	<h1><!-- &#x1F44B; -->Hi, I'm Jon</h1>
 
-<!-- 	<a href="http://www.jontejada.com/resume">
+	<a href="http://www.jontejada.com/resume">
 		<span class="fa-stack">
 			<i class="fa fa-circle fa-stack-2x"></i>
 			<i class="fa fa-file-text fa-inverse fa-stack-1x"></i>
@@ -27,7 +27,7 @@
 		</span>
 		 resume
 	</a>
- -->
+
 	<br>
 	<a href="http://www.github.com/jontejada">
 		<span class="fa-stack">
