portfolio description work

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <div class="container">
 	<div class="row header">
 		<h1>Jon Tejada
+		<!-- <a href="https://github.com/jontejada"><i class="fa fa-github-square"></i></a> -->
 		<a href="https://github.com/jontejada"><i class="fa fa-github"></i></a>
 		<a href="https://www.linkedin.com/in/jontejada"><i class="fa fa-linkedin-square"></i></a>
 		<!-- <a href="/email"><i class="fa fa-envelope-o"></i></a> -->
@@ -28,61 +29,95 @@
 	</div>
 	<div class="row folio">
 		<div class="col-md-6 col-lg-4 col-sm-6">
-			<a href="http://sedonasv.com">
-				<img class='folio-item' src="static/ssv.jpg">
-			</a>
+			<a href="http://sedonasv.com"><img class='folio-item' src="static/ssv.jpg"></a>
 			<div class='folio-desc'>
-				<p class='folio-text'>
-					<span class='folio-title'>Sedona Stone Veneer</span>
-					 - live website for a construction products business in Arizona
+				<p><span class='folio-title'>Sedona Stone Veneer</span></p>
+				<p class='folio-text'>live website for a construction products business in Arizona
 				</p>
 			</div>
 		</div>
-		<div class="col-md-6 col-lg-4 col-sm-6">
-			<a href="http://nearmeow.com">
-				<img class='folio-item' src="static/nearmeow.jpg">
-			</a>
+
+<!-- 		<div class="col-md-6 col-lg-4 col-sm-6">
+			<a href="http://nearmeow.com"><img class='folio-item' src="static/nearmeow.jpg"></a>
 			<div class='folio-desc'>
 				<p class='folio-text'>
 					<span class='folio-title'>NearMeow</span>
 					 - Local reccomendation engine implemented with Google Javascript MapsAPI,
 				</p>
-				<p>
-					<a href="https://github.com/jonharlem/nearmeow">github repo</a>
+				<p><a href="https://github.com/jonharlem/nearmeow">github repo</a></p>
+			</div>
+		</div>
+ -->		
+ 		<div class="col-md-6 col-lg-4 col-sm-6">
+			<a href="http://nearmeow.com"><img class='folio-item' src="static/nearmeow.jpg"></a>
+			<div class='folio-desc'>
+				<p><span class='folio-title'>near meow  </span><a href="https://github.com/jonharlem/nearmeow"><i class="fa fa-github"></i> repo</a></p>
+				<p class='folio-text'>local recommendation engine implemented with Google Javascript MapsAPI,
 				</p>
 			</div>
 		</div>
 		<div class="col-md-6 col-lg-4 col-sm-6">
-			<a href="www.jontejada.com/tea">
-				<img class='folio-item' src="static/tea.jpg">
-			</a>
+			<a href="www.jontejada.com/tea"><img class='folio-item' src="static/tea.jpg"></a>
 			<div class='folio-desc'>
 				<p class='folio-text'>
 					<span class='folio-title'>MeanTea Store</span>
 					 - AngularJS project
 				</p>
-				<p>
-					<a href="https://github.com/jontejada/tea">github repo</a>
-				</p>
+				<p><a href="https://github.com/jontejada/tea">github repo</a></p>
 			</div>			
 		</div>
 		<div class="col-md-6 col-lg-4 col-sm-6">
-			<img class='folio-item' src="static/ssv2.jpg">
+			<a href="www.jontejada.com/SSV"><img class='folio-item' src="static/ssv2.jpg"></a>
+			<div class='folio-desc'>
+				<p class='folio-text'>
+					<span class='folio-title'>MeanTea Store</span>
+					 - AngularJS project
+				</p>
+				<p><a href="https://github.com/jontejada/tea">github repo</a></p>
+			</div>			
 		</div>
 		<div class="col-md-6 col-lg-4 col-sm-6">
-			<img class='folio-item' src="static/gFood.jpg">
+			<a href=""><img class='folio-item' src="static/gFood.jpg"></a>
+			<div class='folio-desc'>
+				<p class='folio-text'>
+					<span class='folio-title'>MeanTea Store</span>
+					 - AngularJS project
+				</p>
+				<p><a href="https://github.com/jontejada/tea">github repo</a></p>
+			</div>			
 		</div>
 		<div class="col-md-6 col-lg-4 col-sm-6">
-			<img class='folio-item' src="static/notReddit.jpg">
+			<a href=""><img class='folio-item' src="static/notReddit.jpg"></a>
+			<div class='folio-desc'>
+				<p class='folio-text'>
+					<span class='folio-title'>MeanTea Store</span>
+					 - AngularJS project
+				</p>
+				<p><a href="https://github.com/jontejada/tea">github repo</a></p>
+			</div>			
 		</div>
 		<div class="col-md-6 col-lg-4 col-sm-6">
-			<img class='folio-item' src="static/pixel.jpg">
+			<a href=""><img class='folio-item' src="static/pixel.jpg"></a>
+ 			<div class='folio-desc'>
+				<p class='folio-text'>
+					<span class='folio-title'>MeanTea Store</span>
+					 - AngularJS project
+				</p>
+				<p><a href="https://github.com/jontejada/tea">github repo</a></p>
+			</div>			
 		</div>
 		<div class="col-md-6 col-lg-4 col-sm-6">
-			<img class='folio-item' src="static/spotifysearch.jpg">
+			<a href=""><img class='folio-item' src="static/spotifysearch.jpg"></a>
+			<div class='folio-desc'>
+				<p class='folio-text'>
+					<span class='folio-title'>MeanTea Store</span>
+					 - AngularJS project
+				</p>
+				<p><a href="https://github.com/jontejada/tea">github repo</a></p>
+			</div>			
 		</div>
 		<!-- dummy below -->
-		<div class="col-md-6 col-lg-4 col-sm-6">
+<!-- 		<div class="col-md-6 col-lg-4 col-sm-6">
 			<img class='folio-item' src="static/gFood.jpg">
 		</div>
 		<div class="col-md-6 col-lg-4 col-sm-6">
@@ -95,7 +130,7 @@
 			<p>4</p>
 			<img class='folio-item' src="static/spotifysearch.jpg">
 		</div>
-	</div>
+ -->	</div>
 </div>
 
 </body>
