finished initial work for production

--- a/index.html
+++ b/index.html
@@ -29,93 +29,74 @@
 	</div>
 	<div class="row folio">
 		<div class="col-md-6 col-lg-4 col-sm-6">
-			<a href="http://sedonasv.com"><img class='folio-item' src="static/ssv.jpg"></a>
+			<a href="http://pioneersv.com"><img class='folio-item' src="static/ssv.jpg"></a>
 			<div class='folio-desc'>
-				<p><span class='folio-title'>Sedona Stone Veneer</span></p>
-				<p class='folio-text'>live website for a construction products business in Arizona
+				<p><span class='folio-title'>pioneerSV.com</span><a href="https://github.com/sedonasv/sedonasv.github.io"><i class="fa fa-github"></i> repo</a></p>
+				<p class='folio-text'>Mobile-first, production site with image lightbox. Built with jQuery, Modernizr and webpack module bundler.
 				</p>
 			</div>
 		</div>
-
-<!-- 		<div class="col-md-6 col-lg-4 col-sm-6">
-			<a href="http://nearmeow.com"><img class='folio-item' src="static/nearmeow.jpg"></a>
-			<div class='folio-desc'>
-				<p class='folio-text'>
-					<span class='folio-title'>NearMeow</span>
-					 - Local reccomendation engine implemented with Google Javascript MapsAPI,
-				</p>
-				<p><a href="https://github.com/jonharlem/nearmeow">github repo</a></p>
-			</div>
-		</div>
- -->		
  		<div class="col-md-6 col-lg-4 col-sm-6">
 			<a href="http://nearmeow.com"><img class='folio-item' src="static/nearmeow.jpg"></a>
 			<div class='folio-desc'>
-				<p><span class='folio-title'>near meow  </span><a href="https://github.com/jonharlem/nearmeow"><i class="fa fa-github"></i> repo</a></p>
-				<p class='folio-text'>local recommendation engine implemented with Google Javascript MapsAPI,
+				<p><span class='folio-title'>nearmeow.com</span><a href="https://github.com/jonharlem/nearmeow"><i class="fa fa-github"></i> repo</a></p>
+				<p class='folio-text'>Local haunts recommendation/voting engine SPA built using NodeJS, Express, PostgreSQL on Heroku and Google Maps API. Made with Josh Cantor & Jon Harlem.
 				</p>
 			</div>
 		</div>
-		<div class="col-md-6 col-lg-4 col-sm-6">
-			<a href="www.jontejada.com/tea"><img class='folio-item' src="static/tea.jpg"></a>
+ 		<div class="col-md-6 col-lg-4 col-sm-6">
+			<a href="http://jontejada.com/tea"><img class='folio-item' src="static/tea.jpg"></a>
 			<div class='folio-desc'>
-				<p class='folio-text'>
-					<span class='folio-title'>MeanTea Store</span>
-					 - AngularJS project
+				<p><span class='folio-title'>Tea Store</span><a href="https://github.com/jontejada/tea"><i class="fa fa-github"></i> repo</a></p>
+				<p class='folio-text'>An AngularJS v1.4 SPA store and shopping cart built with ngRoute, custom directives, Bootstrap grid layout, Google Fonts API, and Font Awesome CSS toolkit. Made with Lissa Walzer.
 				</p>
-				<p><a href="https://github.com/jontejada/tea">github repo</a></p>
-			</div>			
+			</div>
 		</div>
-		<div class="col-md-6 col-lg-4 col-sm-6">
-			<a href="www.jontejada.com/SSV"><img class='folio-item' src="static/ssv2.jpg"></a>
+ 		<div class="col-md-6 col-lg-4 col-sm-6">
+			<a href="http://jontejada.com/SSV"><img class='folio-item' src="static/ssv2.jpg"></a>
 			<div class='folio-desc'>
-				<p class='folio-text'>
-					<span class='folio-title'>MeanTea Store</span>
-					 - AngularJS project
+				<p><span class='folio-title'>stone veneer update</span><a href="https://github.com/jontejada/SSV"><i class="fa fa-github"></i> repo</a></p>
+				<p class='folio-text'>Updated image gallery with Isotope (a dynamic layout & filtering Javascript library), Photoswipe (touch-friendly lightbox Javascript library).
 				</p>
-				<p><a href="https://github.com/jontejada/tea">github repo</a></p>
-			</div>			
+			</div>
 		</div>
-		<div class="col-md-6 col-lg-4 col-sm-6">
+ 		<div class="col-md-6 col-lg-4 col-sm-6">
+			<a href="http://jontejada.com/notReddit"><img class='folio-item' src="static/notReddit.jpg"></a>
+			<div class='folio-desc'>
+				<p><span class='folio-title'>notReddit</span><a href="https://github.com/jontejada/notReddit"><i class="fa fa-github"></i> repo</a></p>
+				<p class='folio-text'>An AngularJS v1.5 SPA reddit clone built with ngAnimate, Google Fonts API, Moment.js date library, Font Awesome CSS toolkit, and extensive custom CSS.
+				</p>
+			</div>
+		</div>
+ 		<div class="col-md-6 col-lg-4 col-sm-6">
+			<a href="http://jontejada.com/pixel_art"><img class='folio-item' src="static/pixel.jpg"></a>
+			<div class='folio-desc'>
+				<p><span class='folio-title'>pixelArt</span><a href="https://github.com/jontejada/pixel_art"><i class="fa fa-github"></i> repo</a></p>
+				<p class='folio-text'>Simple pixel art maker written in vanilla javascript.
+				</p>
+			</div>
+		</div>
+ 		<div class="col-md-6 col-lg-4 col-sm-6">
+			<a href="http://jontejada.com/spotify-albums-and-tracks"><img class='folio-item' src="static/spotifysearch.jpg"></a>
+			<div class='folio-desc'>
+				<p><span class='folio-title'>Spotify Search</span><a href="https://github.com/jontejada/spotify-albums-and-tracks"><i class="fa fa-github"></i> repo</a></p>
+				<p class='folio-text'>Front end Spotify API search wrapper written in jQuery with custom CSS styling.
+				</p>
+			</div>
+		</div>
+<!-- 		<div class="col-md-6 col-lg-4 col-sm-6">
 			<a href=""><img class='folio-item' src="static/gFood.jpg"></a>
 			<div class='folio-desc'>
 				<p class='folio-text'>
-					<span class='folio-title'>MeanTea Store</span>
+					<span class='folio-title'>galvanizeEats</span>
 					 - AngularJS project
 				</p>
 				<p><a href="https://github.com/jontejada/tea">github repo</a></p>
 			</div>			
 		</div>
-		<div class="col-md-6 col-lg-4 col-sm-6">
-			<a href=""><img class='folio-item' src="static/notReddit.jpg"></a>
-			<div class='folio-desc'>
-				<p class='folio-text'>
-					<span class='folio-title'>MeanTea Store</span>
-					 - AngularJS project
-				</p>
-				<p><a href="https://github.com/jontejada/tea">github repo</a></p>
-			</div>			
-		</div>
-		<div class="col-md-6 col-lg-4 col-sm-6">
-			<a href=""><img class='folio-item' src="static/pixel.jpg"></a>
- 			<div class='folio-desc'>
-				<p class='folio-text'>
-					<span class='folio-title'>MeanTea Store</span>
-					 - AngularJS project
-				</p>
-				<p><a href="https://github.com/jontejada/tea">github repo</a></p>
-			</div>			
-		</div>
-		<div class="col-md-6 col-lg-4 col-sm-6">
-			<a href=""><img class='folio-item' src="static/spotifysearch.jpg"></a>
-			<div class='folio-desc'>
-				<p class='folio-text'>
-					<span class='folio-title'>MeanTea Store</span>
-					 - AngularJS project
-				</p>
-				<p><a href="https://github.com/jontejada/tea">github repo</a></p>
-			</div>			
-		</div>
+ -->		
+
+
 		<!-- dummy below -->
 <!-- 		<div class="col-md-6 col-lg-4 col-sm-6">
 			<img class='folio-item' src="static/gFood.jpg">
