added angular group project to portfolio

--- a/index.html
+++ b/index.html
@@ -84,6 +84,14 @@
 				</p>
 			</div>
 		</div>
+ 		<div class="col-md-6 col-lg-4 col-sm-6">
+			<a href="http://spotifeye.com"><img class='folio-item' src="static/spotifeye.jpg"></a>
+			<div class='folio-desc'>
+				<p><span class='folio-title'>spotifeye.com</span><a href="https://github.com/JoshCantor/spotifeye"><i class="fa fa-github"></i> repo</a></p>
+				<p class='folio-text'>Spotify library visualizer built with Angular v1.5. D3 powered visualizations of acoustic attribues with data from calls to the Spotify (with Oauth 2.0) and EchoNest APIs. Uses PostgreSQL with Knex, Express and Node. Database and site hosted on heroku. Made with Josh Cantor, Mauricio Andrades and Shashik Banda
+				</p>
+			</div>
+		</div>
 <!-- 		<div class="col-md-6 col-lg-4 col-sm-6">
 			<a href=""><img class='folio-item' src="static/gFood.jpg"></a>
 			<div class='folio-desc'>
@@ -111,7 +119,8 @@
 			<p>4</p>
 			<img class='folio-item' src="static/spotifysearch.jpg">
 		</div>
- -->	</div>
+ -->	
+	</div>
 </div>
 
 </body>
