--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<a href="https://www.linkedin.com/in/jontejada"><i class="fa fa-linkedin-square"></i></a>
 		<!-- <a href="/email"><i class="fa fa-envelope-o"></i></a> -->
 		<!-- <i class="fa fa-file-o"></i> -->
-		<a href="/resume"><i class="fa fa-file-text-o"></i></a>
+		<a href="static/Jon_Tejada_resume.pdf"><i class="fa fa-file-text-o"></i></a>
 		</h1>
 	</div>
 	<div class='row'>
